manifests/apps/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
      protocol: TCP
