manifests/apps/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - seerr.example.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: seerr
          port: 5055
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
